# friendly-octopus

./: .gitignore  Cargo.toml  readme.md
common/: Cargo.toml
common/src/: lib.rs
desktop-client/: Cargo.toml
desktop-client-package/: Cargo.toml
game-manager/: Cargo.toml
game-manager-package/: Cargo.toml
game-manager-package/src/: main.rs
net/: Cargo.toml
net-client/: Cargo.toml
net-server/: Cargo.toml
net-server/src/: lib.rs
net/src/: encode.rs  lib.rs
src/: main.rs  playground.rs
src/server/: definition.rs  generator.rs  instance.rs  mod.rs  model.rs  observe.rs  seed.rs  vec.rs
web-client/: Cargo.toml
web-client-package/: Cargo.toml
web-server/: Cargo.toml
web-server-package/: Cargo.toml
