[workspace]
members = [
    "common",
    "net",

    # Components
    "game-manager",
    "net-client",
    "net-server",
    "web-client",
    "web-server",
    "desktop-client",

    # Packages
    "game-manager-package",
    "web-client-package",
    "web-server-package",
    "desktop-client-package",
]